@@ -1,4 +1,4 @@
-# $Id: optimize_gcc.mk,v 1.17 2005/01/06 00:08:51 abs Exp $
+# $Id: optimize_gcc.mk,v 1.18 2005/01/29 14:58:40 abs Exp $
 
 # This file is 'experimental' - which is doublespeak for unspeakably
 # ugly, and probably quite broken by design.
@@ -33,6 +33,7 @@ PKG_EXCLUDE_OMIT_FRAME_POINTER+=firefox firefox-gtk2 galeon galeon-devel
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=lua lua4 mozilla mozilla-gtk2
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=thunderbird thunderbird-gtk2
 PKG_EXCLUDE_INLINE_FUNCTIONS+=qemu userppp
+PKG_EXCLUDE_INLINE_FUNCTIONS+=firefox firefox-gtk2 # v1.0, NetBSD i386/2.0
 .if !defined(USE_GCC3)
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=qt3-libs kdeedu3 koffice
 .endif
